--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,16 +2,16 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">#3F51B5</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightgray">#ABA9A9</color>
+    <color name="lightgray2">#ABA9A9</color>
     <color name="darkergray">#2E2E2E</color>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="lightgray">#E0E0E0</color>
     <color name="example_1_bg">#3A284C</color>
     <color name="example_1_bg_light">#433254</color>
     <color name="example_1_bg_secondary">#51356E</color>
@@ -22,7 +22,7 @@
     <color name="example_2_red">#F44336</color>
     <color name="example_3_black">#D9000000</color>
     <color name="example_3_white">#D9FFFFFF</color>
-    <color name="example_3_blue">#1973E8</color>
+    <color name="blue">#1973E8</color>
     <color name="example_3_blue_light">#D2E3FC</color>
     <color name="example_3_toolbar_color">#607D8B</color>
     <color name="example_3_statusbar_color">#455A64</color>
@@ -47,7 +47,7 @@
     <color name="blue_800">#1565C0</color>
     <color name="cyan_700">#0097A7</color>
     <color name="example_6_black">#BF000000</color>
-    <color name="example_7_white">#D9FFFFFF</color>
+    <color name="white7">#D9FFFFFF</color>
     <color name="example_7_yellow">#FFEB3B</color>
     <color name="example_1_selection_color">#FCCA3E</color>
     <color name="inactive_text_color">#BEBEBE</color>
