--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,15 +6,16 @@
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#3F51B5</color>
     <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="calLight">#F3F3F3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="lightgray">#E0E0E0</color>
+    <color name="lightgray">#393737</color>
     <color name="blue">#1973E8</color>
     <color name="cyan_700">#0097A7</color>
     <color name="white7">#D9FFFFFF</color>
     <color name="inactive_text_color">#BEBEBE</color>
     <color name="dark_gray">#979595</color>
+
 </resources>
